<resources>
    <string name="app_name">NewFocalPoint</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Email</string>
    <string name="log_in_button">Log In</string>
    <string name="forgot_pass_text">Forgot password</string>
    <string name="create_account_text">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="school">School</string>
    <string name="add_course_text">Add Course</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionNumber">QNum</string>
    <string name="timerDefault">Time Remaining</string>
    <string name="questionD">D</string>
    <string name="questionC">C</string>
    <string name="questionB">B</string>
    <string name="questionA">A</string>
    <string name="question_text">Question text</string>
    <string name="answer_text">Answer</string>
    <string name="submitAnswer">Submit Answer</string>
    <string name="appwidget_text">Quiz Available!</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_notification__login">Notification_Login</string>
</resources>
