<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.administrator.focalpoint.HoldingMultipleChoice">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qNum_qTime_Layout"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionNumber"
            android:id="@+id/questionNumber"
            android:textSize="@dimen/qNum_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timerDefault"
            android:id="@+id/timerCount"
            android:textSize="@dimen/qTimer_size"
            android:gravity="end"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_text"
                android:id="@+id/questionText"
                android:textSize="@dimen/qText_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_text"
                android:paddingTop="10dp"
                android:paddingBottom="25dp"
                android:id="@+id/answerA"
                android:textSize="@dimen/qAns_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_text"
                android:paddingBottom="25dp"
                android:id="@+id/answerB"
                android:textSize="@dimen/qAns_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_text"
                android:paddingBottom="25dp"
                android:id="@+id/answerC"
                android:textSize="@dimen/qAns_size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_text"
                android:paddingBottom="25dp"
                android:id="@+id/answerD"
                android:textSize="@dimen/qAns_size" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionA"
            android:id="@+id/questionAButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionB"
            android:id="@+id/questionBButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionC"
            android:id="@+id/questionCButton"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionD"
            android:id="@+id/questionDButton"
            android:layout_weight="1"/>

    </LinearLayout>



</LinearLayout>
